deployments/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-management
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-management
  template:
    metadata:
      labels:
        app: order-management
    spec:
      containers:
        - name: order-management
          image: enson89/order-management:latest
          ports:
            - containerPort: 8080
