deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-management
  labels:
    app: order-management
spec:
  type: ClusterIP
  selector:
    app: order-management
  ports:
    - port: 8080
      targetPort: 8080
